--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -267,9 +267,10 @@ body {
   line-height: 1.14;
   letter-spacing: 0.03em;
   text-transform: uppercase;
-  text-align: center;
   color: var(--color-white);
-  padding: 27px 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   
 }
 /*--------------------------Team------------------*/
